--- a/frontend/package.json
+++ b/frontend/package.json
@@ -117,7 +117,13 @@
   },
   "overrides": {
     "follow-redirects@<1.15.6": "1.15.6",
-    "tmp": "^0.2.4"
+    "tmp": "^0.2.4",
+    "test-exclude": {
+      "glob": "11.1.0"
+    },
+    "js-beautify": {
+      "glob": "11.1.0"
+    }
   },
   "nyc": {
     "check-coverage": true,
