fix(cypress): fixed CVE-2025-64756 vulnerability

--- a/cypress/package.json
+++ b/cypress/package.json
@@ -26,6 +26,12 @@
   },
   "overrides": {
     "form-data": "4.0.4",
-    "tmp": "^0.2.4"
+    "tmp": "^0.2.4",
+    "shelljs": {
+      "glob": "10.4.5"
+    },
+    "module-lookup-amd": {
+      "glob": "10.4.5"
+    }
   }
 }
