fix(be) CVE-2025-67735

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -363,6 +363,18 @@
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.projectreactor.netty</groupId>
+                <artifactId>reactor-netty-http</artifactId>
+                <version>1.2.11</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-bom</artifactId>
+                <version>4.1.129.Final</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -429,6 +441,9 @@
                             <includes>
                                 <include>**/*IntegrationTest.java</include>
                             </includes>
+                            <systemPropertyVariables>
+                                <io.netty.transport.noNative>true</io.netty.transport.noNative>
+                            </systemPropertyVariables>
                         </configuration>
                     </execution>
                 </executions>
@@ -449,6 +464,9 @@
                             cucumber.junit-platform.naming-strategy=long
                         </configurationParameters>
                     </properties>
+                    <systemPropertyVariables>
+                        <io.netty.transport.noNative>true</io.netty.transport.noNative>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
 
