--- a/frontend/package.json
+++ b/frontend/package.json
@@ -118,7 +118,8 @@
   "overrides": {
     "follow-redirects@<1.15.6": "1.15.6",
     "tmp": "^0.2.4",
-    "js-yaml": "^4.1.1"
+    "js-yaml": "^4.1.1",
+    "@smithy/config-resolver": "^3.0.13"
   },
   "nyc": {
     "check-coverage": true,
