--- a/frontend/package.json
+++ b/frontend/package.json
@@ -119,6 +119,7 @@
     "follow-redirects@<1.15.6": "1.15.6",
     "tmp": "^0.2.4",
     "js-yaml": "^4.1.1",
+    "@smithy/config-resolver": "^3.0.13",
     "@aws-sdk/client-firehose@^3.621.0": "^3.723.0",
 		"@aws-sdk/client-kinesis@^3.621.0": "^3.723.0",
 		"@aws-sdk/client-personalize-events@^3.621.0": "^3.723.0"
