--- a/cypress/package.json
+++ b/cypress/package.json
@@ -25,6 +25,7 @@
     "nonGlobalStepDefinitions": true
   },
   "overrides": {
+    "lodash": "4.17.21",
     "form-data": "4.0.4",
     "tmp": "^0.2.4",
     "shelljs": {
