--- a/frontend/package.json
+++ b/frontend/package.json
@@ -116,14 +116,15 @@
     "wiremock": "^3.13.1"
   },
   "overrides": {
+    "lodash": "4.17.21",
     "qs": "6.14.1",
     "follow-redirects@<1.15.6": "1.15.6",
     "tmp": "^0.2.4",
     "js-yaml": "^4.1.1",
     "@smithy/config-resolver": "^4.0.0",
     "@aws-sdk/client-firehose@^3.621.0": "^3.723.0",
-		"@aws-sdk/client-kinesis@^3.621.0": "^3.723.0",
-		"@aws-sdk/client-personalize-events@^3.621.0": "^3.723.0"
+    "@aws-sdk/client-kinesis@^3.621.0": "^3.723.0",
+    "@aws-sdk/client-personalize-events@^3.621.0": "^3.723.0"
   },
   "nyc": {
     "check-coverage": true,
