chore: override lodash version to fix vulnerability

--- a/cypress/package.json
+++ b/cypress/package.json
@@ -25,7 +25,8 @@
     "nonGlobalStepDefinitions": true
   },
   "overrides": {
-    "lodash": "^4.17.21",
+    "lodash@^4.0.0": "^4.17.23",
+    "lodash-es@^4.0.0": "^4.17.23",
     "form-data": "4.0.4",
     "tmp": "^0.2.4",
     "shelljs": {
