--- a/frontend/package.json
+++ b/frontend/package.json
@@ -116,7 +116,8 @@
     "wiremock": "^3.13.1"
   },
   "overrides": {
-    "lodash": "^4.17.21",
+    "lodash@^4.0.0": "^4.17.23",
+    "lodash-es@^4.0.0": "^4.17.23",
     "qs": "6.14.1",
     "follow-redirects@<1.15.6": "1.15.6",
     "tmp": "^0.2.4",
