--- a/frontend/package.json
+++ b/frontend/package.json
@@ -116,6 +116,7 @@
     "wiremock": "^3.13.1"
   },
   "overrides": {
+    "fast-xml-parser": "^5.3.6",
     "webpack@<5.105.1": "5.105.1",
     "lodash@^4.0.0": "^4.17.23",
     "qs": "6.14.1",
